@@ -37,9 +37,8 @@
  */
 package io.cryostat.rules;
 
-import jdk.nashorn.api.tree.Tree;
+import org.openjdk.nashorn.api.tree.Tree;
 
-@SuppressWarnings("serial")
 class IllegalMatchExpressionException extends RuntimeException {
     IllegalMatchExpressionException() {
         this("matchExpression parsing failed");
