@@ -37,9 +37,10 @@
  */
 package io.cryostat.rules;
 
-import jdk.nashorn.api.tree.CompilationUnitTree;
-import jdk.nashorn.api.tree.Parser;
-import jdk.nashorn.api.tree.TreeVisitor;
+import org.openjdk.nashorn.api.tree.CompilationUnitTree;
+import org.openjdk.nashorn.api.tree.Parser;
+import org.openjdk.nashorn.api.tree.TreeVisitor;
+import org.openjdk.nashorn.internal.runtime.ParserException;
 
 public class MatchExpressionValidator {
 
@@ -47,20 +48,28 @@ public class MatchExpressionValidator {
 
     private final TreeVisitor<Void, String> treeVisitor = new MatchExpressionTreeVisitor();
 
+    public String validate(String matchExpression) throws MatchExpressionValidationException {
+        return validate("", matchExpression);
+    }
+
     String validate(Rule rule) throws MatchExpressionValidationException {
+        String name = rule.getName();
+        return validate(name == null ? "" : name, rule.getMatchExpression());
+    }
+
+    private String validate(String name, String matchExpression)
+            throws MatchExpressionValidationException {
         try {
-            String name = rule.getName();
-            if (name == null) {
-                name = "";
-            }
-            CompilationUnitTree cut = parser.parse(name, rule.getMatchExpression(), null);
+            CompilationUnitTree cut = parser.parse(name, matchExpression, null);
             if (cut == null) {
                 throw new IllegalMatchExpressionException();
             }
-            cut.accept(treeVisitor, rule.getMatchExpression());
+            cut.accept(treeVisitor, matchExpression);
+        } catch (ParserException pe) {
+            throw new MatchExpressionValidationException(pe);
         } catch (IllegalMatchExpressionException imee) {
             throw new MatchExpressionValidationException(imee);
         }
-        return rule.getMatchExpression();
+        return matchExpression;
     }
 }
